fixed sale-line overflow

--- a/index.css
+++ b/index.css
@@ -108,14 +108,13 @@ a:hover {
 }
 
 #sale-line {
-  width: 100%;
+  width: 100vw;
   display: inline-flex;
-  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  height: 42px;
+  height: 44px;
   background-color: #f5f5f7;
-  padding: 42px 0 0 0;
+  padding: 40px 0 0 0;
   font-family: "SF Pro Text", sans-serif;
   font-size: 14px;
 }
